# api

./: .gitignore  Makefile  README.md
client-go/: go.mod
client-go/thiggle/: bool.go  client.go  client_test.go  types.go  util.go
client-python/: README.md  pyproject.toml
client-python/examples/: categorize.py  cfg.py  completion.py  example.py  regex.py  typed_completion.py
client-python/thiggle/: __init__.py  thiggle.py
client-ts/: package-lock.json  package.json  tsconfig.json
client-ts/src/: index.ts  thiggle.ts
docs.thiggle.com/: LICENSE  README.md  package.json  pnpm-lock.yaml  theme.config.tsx
docs.thiggle.com/components/: Logo.jsx  Wordmark.jsx
docs.thiggle.com/pages/: _meta.json  auth.mdx  index.mdx
docs.thiggle.com/pages/api-docs/: _meta.json  categorize.mdx  cfg.mdx  completion.mdx  regex.mdx  typed.mdx
docs.thiggle.com/pages/use-cases/: _meta.json
docs.thiggle.com/pages/use-cases/categorize/: _meta.json  ai-agents.mdx  multiple-choice.mdx  sentiment.mdx  training-data.mdx
docs.thiggle.com/pages/use-cases/regex/: _meta.json  typed_output.mdx
